# lightning-hydra-uv-docker

./: .dockerignore  .gitignore  Dockerfile  Makefile  compose.yaml  pyproject.toml
configs/data/: mnist.yaml
configs/model/: mnist.yaml
src/mypackage/: eval.py  train.py
src/mypackage/utils/: __init__.py  instantiators.py  logging_utils.py  rich_utils.py  utils.py
