[project]
name = "mypackage"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  # core project dependencies
  "lightning>=2.5",
  "torchmetrics>=0.11.4",
  "hydra-core==1.3.2",
  "hydra-colorlog==1.2.0",
  "hydra-optuna-sweeper==1.2.0",
  "rootutils",
  "rich",

  # logger dependencies
  "wandb",

  # task runner dependencies
  "poethepoet",
]

[build-system]
requires = ["uv_build>=0.11.8,<0.12"]
build-backend = "uv_build"

[tool.poe.tasks.train]
help = "Train the model."
cmd = "python -m mypackage.train"

[tool.poe.tasks.eval]
help = "Evaluate the model."
cmd = "python -m mypackage.eval"

[tool.poe.tasks.smoke]
help = "Check Python, Pytorch, CUDA."
cmd = "python -c \"import torch; print('cuda=', torch.cuda.is_available()); print('devices=', torch.cuda.device_count())\""
